--- a/example/network/index.html
+++ b/example/network/index.html
@@ -58,17 +58,26 @@
     const radialNames = [
       { name: 'URF / TX The BOX', category: 'Investment', impact: 'Retail' },
       { name: 'SAUVEREIGN', category: 'Investment', impact: 'Branding' },
-      { name: 'DONGHAI', category: 'Forces', impact: 'East.West' },
+      { name: 'DONGHAI', category: 'Forces', impact: 'East.West', 'Edu.Learning.Collective' },
       { name: 'EASTERN SEAS', category: 'Forces', impact: 'Strategy.Culture' },
       { name: 'DANDELION', category: 'Consultancies', impact: 'Edu.Learning.Collective' },
       { name: 'BILI Q', category: 'Cities.culture.art', impact: 'Creative Solution' },
-      { name: 'KYOTO ART BANK', category: 'Ecosystems', impact: 'Edu.Learning.Collective' },
+      { name: 'KYOTO ART BANK', category: 'Ecosystems', impact: 'Edu.Learning.Collective', 'Strategy.Culture', 'Branding'},
       { name: 'ARAMIS WINES', category: 'Yesteryears', impact: 'Branding' }
     ];
 
 
     const categories = [...new Set(radialNames.map(r => r.category))];
     const impacts = [...new Set(radialNames.map(r => r.impact))];
+    const impactRingMap = {
+      'Strategy.Culture': 0,
+      'Branding': 1,
+      'Retail': 2,
+      'East.West': 3,
+      'Edu.Learning.Collective': 4,
+      'Creative Solution': 5
+    };
+
     let filteredCategories = new Set(categories);
     let filteredImpacts = new Set(impacts);
 
@@ -88,46 +97,45 @@
     for (let i = 0; i < radialCount; i++) {
       const radialInfo = radialNames[i % radialNames.length];
       const impactArray = Array.isArray(radialInfo.impact) ? radialInfo.impact : [radialInfo.impact];
-      const thisMaxLayer = impactArray.length;
+      radialMaxLayer.push(impactArray.length);
 
-      radialMaxLayer.push(thisMaxLayer);
       let lastNodeId = centerNodeId;
+      const angle = (2 * Math.PI * i) / radialCount;
 
-      for (let l = 0; l < thisMaxLayer; l++) {
-        const angle = (2 * Math.PI * i) / radialCount;
-        const radius = baseRadius + l * ringSpacing;
+      impactArray.forEach(impactType => {
+    const ringIndex = impactRingMap[impactType] ?? 0; // fallback to ring 0
+    const radius = baseRadius + ringIndex * ringSpacing;
 
-        const x = radius * Math.cos(angle);
-        const y = radius * Math.sin(angle);
+    const x = radius * Math.cos(angle);
+    const y = radius * Math.sin(angle);
 
-        nodes.push({
-          id: nodeId,
-          fx: x,
-          fy: y,
-          radialIndex: i,
-          layer: l,
-          size: 6,
-          color: ringColors[l % ringColors.length],
-          name: radialInfo.name,
-          category: radialInfo.category,
-      impact: impactArray[l] // assign specific impact to this node
+    nodes.push({
+      id: nodeId,
+      fx: x,
+      fy: y,
+      radialIndex: i,
+      layer: ringIndex,
+      size: 6,
+      color: ringColors[ringIndex % ringColors.length],
+      name: radialInfo.name,
+      category: radialInfo.category,
+      impact: impactType
     });
 
-        links.push({
-          source: lastNodeId,
-          target: nodeId,
-          radialIndex: i,
-          category: radialInfo.category,
-          impact: impactArray[l]
-        });
+    links.push({
+      source: lastNodeId,
+      target: nodeId,
+      radialIndex: i,
+      category: radialInfo.category,
+      impact: impactType
+    });
 
-        lastNodeId = nodeId;
-        nodeId++;
-      }
+    lastNodeId = nodeId;
+    nodeId++;
+  });
 
   // Add invisible tip node
-      const angle = (2 * Math.PI * i) / radialCount;
-      const radius = baseRadius + thisMaxLayer * ringSpacing + 20;
+      const radius = baseRadius + (impactArray.length ? impactRingMap[impactArray[impactArray.length - 1]] : 1) * ringSpacing + 40;
       const x = radius * Math.cos(angle);
       const y = radius * Math.sin(angle);
 
@@ -136,7 +144,7 @@
         fx: x,
         fy: y,
         radialIndex: i,
-        layer: thisMaxLayer,
+        layer: 999,
         size: 0,
         color: 'transparent',
         invisible: true,
