removed double impact

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -53,7 +53,7 @@
     const radialNames = [
       { name: 'URF / TX The BOX', category: 'Investment', impact: 'Retail' },
       { name: 'SAUVEREIGN', category: 'Investment', impact: 'Branding' },
-      { name: 'DONGHAI', category: 'Forces', impact: 'East.West', 'Edu.Learning.Collective' },
+      { name: 'DONGHAI', category: 'Forces', impact: 'East.West' },
       { name: 'EASTERN SEAS', category: 'Forces', impact: 'Strategy.Culture' },
       { name: 'DANDELION', category: 'Consultancies', impact: 'Edu.Learning.Collective' },
       { name: 'BILI Q', category: 'Cities.culture.art', impact: 'Creative Solution' },
