testing out multiple impacts

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -42,8 +42,8 @@
     <div id="categoryFilters"></div>
   </div>
 
-  <div id="impactLegend" style="margin-top: 20px;">
-    <h4>IMPACT</h4>
+  <div id="impactLegend">
+    <h4>APPROACH & IMPACT</h4>
     <div id="impactFilters"></div>
   </div>
 
@@ -51,7 +51,7 @@
 
   <script>
     const radialNames = [
-      { name: 'URF / TX The BOX', category: 'Investment', impact: 'Retail' },
+      { name: 'URF / TX The BOX', category: 'Investment', impact: ['Retail', 'Branding', 'East.West'] },
       { name: 'SAUVEREIGN', category: 'Investment', impact: 'Branding' },
       { name: 'DONGHAI', category: 'Forces', impact: 'East.West' },
       { name: 'EASTERN SEAS', category: 'Forces', impact: 'Strategy.Culture' },
