--- a/example/network/index.html
+++ b/example/network/index.html
@@ -1,272 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-  <style> 
+<head>
+  <meta charset="UTF-8" />
+  <title>Radial Graph with Categories & Impacts</title>
+  <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; position: absolute; top: 0; left: 0; z-index: 0; }
-
-    #controls {
+    #controls, #filter-panel {
       position: absolute;
       top: 10px;
       left: 10px;
       z-index: 10;
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.9);
       padding: 10px;
       border-radius: 8px;
       font-family: sans-serif;
     }
-
-    #legend {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 10;
-      background: rgba(255,255,255,0.95);
-      padding: 10px;
-      border-radius: 8px;
-      font-family: sans-serif;
+    #filter-panel {
+      top: 130px;
+      max-width: 250px;
     }
-
-    #legend h4 {
-      margin-top: 0;
-      font-size: 14px;
+    #filter-panel label {
+      display: block;
+      margin-bottom: 4px;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/force-graph"></script>
 </head>
-
 <body>
 
-  <div id="legend">
-    <h4>PORTFOLIO & CATEGORIES</h4>
-    <div id="categoryFilters"></div>
-  </div>
-
-  <div id="impactLegend">
-    <h4>APPROACH & IMPACT</h4>
-    <div id="impactFilters"></div>
+  <div id="filter-panel">
+    <strong>PORTFOLIO & CATEGORIES</strong><br>
+    <div id="category-filters"></div>
+    <br>
+    <strong>APPROACH & IMPACT</strong><br>
+    <div id="impact-filters"></div>
   </div>
 
   <div id="graph"></div>
 
   <script>
-    const radialNames = [
-      { name: 'URF / TX The BOX', category: ['Investment'], impact: ['Retail'] },
-      { name: 'SAUVEREIGN', category: ['Forces', 'Consultancies'], impact: ['Branding', 'Retail'] },
-      { name: 'DONGHAI', category: ['Forces'], impact: ['East.West', 'Strategy.Culture'] },
-      { name: 'EASTERN SEAS', category: ['Investment', 'Consultancies'], impact: ['Retail', 'Creative Solution'] },
-      { name: 'DANDELION', category: ['Cities.culture.art'], impact: ['Edu.Learning.Collective'] },
-      { name: 'BILI Q', category: ['Yesteryears'], impact: ['Strategy.Culture', 'East.West'] },
-      { name: 'KYOTO ART BANK', category: ['Ecosystems', 'Cities.culture.art'], impact: ['Creative Solution', 'Edu.Learning.Collective'] },
-      { name: 'ARAMIS WINES', category: ['Investment', 'Yesteryears'], impact: ['Branding', 'Retail'] }
+    const baseRadius = 100;
+    const ringSpacing = 80;
+    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'];
+    const allCategories = ['Investment', 'Forces', 'Consultancies', 'Cities.culture.art', 'Ecosystems', 'Yesteryears'];
+    const allImpacts = ['Strategy.Culture', 'Branding', 'Retail', 'East.West', 'Edu.Learning.Collective', 'Creative Solution'];
+
+    const radialLines = [
+      { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
+      { name: 'SAUVEREIGN', categories: ['Consultancies'], impacts: ['Branding'] },
+      { name: 'DONGHAI', categories: ['Forces'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'EASTERN SEAS', categories: ['Cities.culture.art'], impacts: ['Creative Solution'] },
+      { name: 'DANDELION', categories: ['Ecosystems'], impacts: ['Edu.Learning.Collective'] },
+      { name: 'BILI Q', categories: ['Yesteryears'], impacts: ['Retail', 'Branding'] },
+      { name: 'KYOTO ART BANK', categories: ['Investment', 'Cities.culture.art'], impacts: ['Strategy.Culture'] },
+      { name: 'ARAMIS WINES', categories: ['Forces'], impacts: ['East.West', 'Branding'] }
     ];
 
-
-
-    const categories = [...new Set(radialNames.map(r => r.category))];
-    const impacts = [...new Set(radialNames.map(r => r.impact))];
-    const impactRingMap = {
-      'Strategy.Culture': 0,
-      'Branding': 1,
-      'Retail': 2,
-      'East.West': 3,
-      'Edu.Learning.Collective': 4,
-      'Creative Solution': 5
-    };
-
-    let filteredCategories = new Set(categories);
-    let filteredImpacts = new Set(impacts);
-
-    const radialCount = radialNames.length;
-    const maxLayers = 6;
-    const ringSpacing = 80;
-    const baseRadius = 100;
-    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'];
-    
     const nodes = [], links = [];
-    const radialMaxLayer = [];
     let nodeId = 0;
 
     const centerNodeId = nodeId++;
-    nodes.push({ id: centerNodeId, fx: 0, fy: 0, size: 4, color: '#000000' });
-
-    for (let i = 0; i < radialCount; i++) {
-      const radialInfo = radialNames[i % radialNames.length];
-      const impactArray = Array.isArray(radialInfo.impact) ? radialInfo.impact : [radialInfo.impact];
-      const categoryArray = Array.isArray(radialInfo.category) ? radialInfo.category : [radialInfo.category];
-
-      radialMaxLayer.push(impactArray.length);
-
-      let lastNodeId = centerNodeId;
-      const angle = (2 * Math.PI * i) / radialCount;
-
-      impactArray.forEach(impactType => {
-    const ringIndex = impactRingMap[impactType] ?? 0; // fallback to ring 0
-    const radius = baseRadius + ringIndex * ringSpacing;
-
-    const x = radius * Math.cos(angle);
-    const y = radius * Math.sin(angle);
-
     nodes.push({
-      id: nodeId,
-      fx: x,
-      fy: y,
-      radialIndex: i,
-      layer: ringIndex,
-      size: 6,
-      color: ringColors[ringIndex % ringColors.length],
-      name: radialInfo.name,
-      categories: categoryArray,
-      impacts: impactArray,
-      impact: impactType // For filtering
+      id: centerNodeId,
+      fx: 0,
+      fy: 0,
+      size: 4,
+      color: '#000000'
     });
 
-    links.push({
-      source: lastNodeId,
-      target: nodeId,
-      radialIndex: i,
-      categories: categoryArray,
-      impacts: impactArray,
-      impact: impactType
+    radialLines.forEach((line, i) => {
+      let lastNodeId = centerNodeId;
+      const angle = (2 * Math.PI * i) / radialLines.length;
+
+      line.impacts.forEach(impact => {
+        const layer = allImpacts.indexOf(impact); // map each impact to a ring index
+        const radius = baseRadius + layer * ringSpacing;
+        const x = radius * Math.cos(angle);
+        const y = radius * Math.sin(angle);
+
+        const node = {
+          id: nodeId,
+          fx: x,
+          fy: y,
+          radialIndex: i,
+          name: line.name,
+          categories: line.categories,
+          impacts: line.impacts,
+          size: 6,
+          color: ringColors[layer % ringColors.length]
+        };
+
+        nodes.push(node);
+        links.push({ source: lastNodeId, target: nodeId });
+        lastNodeId = nodeId;
+        nodeId++;
+      });
     });
-
-    lastNodeId = nodeId;
-    nodeId++;
-  });
-
-  // Add a tip node
-      const lastRingIndex = impactArray.length > 0 ? impactRingMap[impactArray[impactArray.length - 1]] : 1;
-      const radius = baseRadius + lastRingIndex * ringSpacing + 40;
-      const x = radius * Math.cos(angle);
-      const y = radius * Math.sin(angle);
-
-      nodes.push({
-        id: nodeId,
-        fx: x,
-        fy: y,
-        radialIndex: i,
-        layer: 999,
-        size: 0,
-        color: 'transparent',
-        invisible: true,
-        name: radialInfo.name,
-        categories: categoryArray,
-        impacts: impactArray
-      });
-
-      links.push({
-        source: lastNodeId,
-        target: nodeId,
-        radialIndex: i
-      });
-
-      nodeId++;
-    }
 
     const gData = { nodes, links };
     let currentState = 3;
     let activeRadial = null;
 
     const Graph = ForceGraph()(document.getElementById('graph'))
-    .graphData(gData)
-    .enableNodeDrag(false)
-    .onEngineTick(() => Graph.pauseAnimation())
-    .linkWidth(link =>
-      filteredCategories.has(link.category) &&
-      filteredImpacts.has(link.impact) &&
-      (currentState !== 2 || link.radialIndex === activeRadial) ? 2 : 0
-      )
-    .linkColor(link => filteredCategories.has(link.category) ? '#aaa' : 'transparent')
-    .onNodeHover(node => {
-      activeRadial = node ? node.radialIndex : null;
-      Graph.graphData(gData);
-    })
-    .nodeCanvasObject((node, ctx, globalScale) => {
-      if (node.id === 0 && currentState >= 2) {
-        ctx.save();
-        ctx.strokeStyle = '#ddd';
-        ctx.lineWidth = 1 / globalScale;
-        for (let i = 0; i < maxLayers; i++) {
-          ctx.beginPath();
-          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-          ctx.stroke();
+      .graphData(gData)
+      .enableNodeDrag(false)
+      .onEngineTick(() => Graph.pauseAnimation())
+      .linkWidth(link => currentState === 2 ? 1 : 1)
+      .linkColor(() => '#aaa')
+      .onNodeHover(node => {
+        activeRadial = node ? node.radialIndex : null;
+        Graph.graphData(Graph.graphData()); // refresh
+      })
+      .nodeCanvasObject((node, ctx, globalScale) => {
+        if (node.id === 0 && currentState >= 2) {
+          ctx.save();
+          ctx.strokeStyle = '#ddd';
+          ctx.lineWidth = 1 / globalScale;
+          for (let i = 0; i < allImpacts.length; i++) {
+            ctx.beginPath();
+            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+            ctx.stroke();
+          }
+          ctx.restore();
         }
-        ctx.restore();
-      }
 
-      if (
-        node.invisible || node.id === 0 || currentState < 3 ||
-        !filteredCategories.has(node.category) || !filteredImpacts.has(node.impact)
-        ) return;
+        if (node.id === 0 || currentState < 3) return;
 
-        const isHighlighted = node.radialIndex === activeRadial;
-      ctx.beginPath();
-      ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
-      ctx.fillStyle = node.color;
-      ctx.globalAlpha = isHighlighted || activeRadial === null ? 1 : 0.1;
-      ctx.fill();
-      ctx.globalAlpha = 1;
-    });
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
+        ctx.fillStyle = node.color;
+        ctx.globalAlpha = activeRadial === null || node.radialIndex === activeRadial ? 1 : 0.1;
+        ctx.fill();
+        ctx.globalAlpha = 1;
+      });
 
     function setState(state) {
       currentState = state;
       activeRadial = null;
-      Graph.graphData(gData);
+      Graph.graphData(Graph.graphData());
     }
 
-    function buildLegend() {
-      const container = document.getElementById('categoryFilters');
-      categories.forEach(category => {
+    function createCheckboxGroup(containerId, options, groupType) {
+      const container = document.getElementById(containerId);
+      options.forEach(opt => {
         const label = document.createElement('label');
-        label.style.display = 'block';
-        label.style.marginBottom = '5px';
-
-        const checkbox = document.createElement('input');
-        checkbox.type = 'checkbox';
-        checkbox.checked = true;
-        checkbox.onchange = () => {
-          if (checkbox.checked) {
-            filteredCategories.add(category);
-          } else {
-            filteredCategories.delete(category);
-          }
-          Graph.graphData(gData);
-        };
-
-        label.appendChild(checkbox);
-        label.appendChild(document.createTextNode(' ' + category));
+        label.innerHTML = `<input type="checkbox" value="${opt}" data-group="${groupType}"> ${opt}`;
         container.appendChild(label);
       });
     }
 
-    function buildImpactLegend() {
-      const container = document.getElementById('impactFilters');
-      impacts.forEach(impact => {
-        const label = document.createElement('label');
-        label.style.display = 'block';
-        label.style.marginBottom = '5px';
-
-        const checkbox = document.createElement('input');
-        checkbox.type = 'checkbox';
-        checkbox.checked = true;
-        checkbox.onchange = () => {
-          if (checkbox.checked) {
-            filteredImpacts.add(impact);
-          } else {
-            filteredImpacts.delete(impact);
-          }
-          Graph.graphData(gData);
-        };
-
-        label.appendChild(checkbox);
-        label.appendChild(document.createTextNode(' ' + impact));
-        container.appendChild(label);
-      });
+    function getCheckedFilters(group) {
+      return Array.from(document.querySelectorAll(`input[data-group="${group}"]:checked`)).map(el => el.value);
     }
 
-    buildLegend();
-    buildImpactLegend();
+    function applyFilters() {
+      const selectedCategories = getCheckedFilters('category');
+      const selectedImpacts = getCheckedFilters('impact');
+
+      const filteredNodes = nodes.filter(n => {
+        if (!n.name) return false;
+        const catMatch = selectedCategories.length === 0 || selectedCategories.some(cat => n.categories.includes(cat));
+        const impMatch = selectedImpacts.length === 0 || selectedImpacts.some(imp => n.impacts.includes(imp));
+        return catMatch && impMatch;
+      });
+
+      const visibleNodeIds = new Set(filteredNodes.map(n => n.id).concat(centerNodeId));
+      const filteredLinks = links.filter(link => visibleNodeIds.has(link.source) && visibleNodeIds.has(link.target));
+
+      Graph.graphData({ nodes: [...filteredNodes, nodes[0]], links: filteredLinks });
+    }
+
+    createCheckboxGroup('category-filters', allCategories, 'category');
+    createCheckboxGroup('impact-filters', allImpacts, 'impact');
+
+    document.querySelectorAll('#filter-panel input').forEach(el =>
+      el.addEventListener('change', applyFilters)
+    );
+
     setState(3);
+    applyFilters();
   </script>
 </body>
 </html>
